# joblib-typed-cache

./: .gitignore  LICENSE  README.md  justfile  noxfile.py  prek.toml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  testpypi.yml
src/joblib_typed_cache/: __init__.py  core.py
tests/: test_core.py
