[project]
name = "joblib-typed-cache"
version = "0.1.0"
description = "Typed version of joblib's cache to support pydantic validation and type checking"
readme = "README.md"
authors = [
    {name = "Sören Zapp"},
]
keywords = ["joblib", "cache", "typing", "pydantic"]
license = 'MIT'
license-files = ['LICENSE']
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.0",
]

[project.urls]
Source = 'https://github.com/szapp/joblib-typed-cache'
Issues = 'https://github.com/szapp/joblib-typed-cache/issues'
Funding = 'https://ko-fi.com/szapp'

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
    "interrogate>=1.7.0",
    "nox>=2026.2.9",
    "prek>=0.3.5",
    "pydantic>=1.10.14",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
tests = [
    "inline-snapshot>=0.32.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
]

[tool.uv]
default-groups = [
    "dev",
    "tests",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",     # organize-imports
    "E501",  # line-too-long
    "UP006", # non-pep585-annotation
    "UP035", # deprecated-import
    "D200",  # unnecessary-multiline-docstring
    "D209",  # new-line-after-last-paragraph
    "D210",  # surrounding-whitespace
    "D212",  # multi-line-summary-first-line
    "D403",  # first-word-capitalized
    "D405",  # non-capitalized-section-name
    "D416",  # missing-section-name-colon
]
ignore = [
    "E731", # lambda-assignment
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/test_*.py" = ["S101"] # assert

[tool.ruff.format]
line-ending = "lf"

[tool.pytest]
strict_xfail = true # Error on successful tests that should fail
addopts = [
    "-ra",                     # More insights
    "-vv",                     # Show parametrized test names
    "-p",
    "no:tach",                 # Skipping tests skews coverage
    "--strict-markers",        # Prevent silent bugs
    "--strict-config",         # Report errors in config
    "--doctest-modules",       # Test code examples in doc strings
    "--cov",                   # Report coverage by default
    "--import-mode=importlib", # Prevent importing from local src
]
testpaths = ["tests", "src"] # Speed up collection; include src for doctest

[tool.coverage.run]
source = [
    "src",
    "tests", # Spot outdated tests
]
branch = true

[tool.coverage.report]
fail_under = 100     # Clean coverage. Use `#pragma: no cover` to skip coverage.
ignore_errors = true
show_missing = true
skip_covered = true
skip_empty = true

[tool.inline-snapshot]
format-command = "uv run ruff check --fix-only --stdin-filename {filename} | uv run ruff format --stdin-filename {filename}"

[tool.interrogate]
omit-covered-files = true
verbose = 2
fail-under = 100
whitelist-regex = ["test_.*"]
exclude = ["*.cache"]
style = "google"

[tool.complexipy]
paths = ["src", "tests"]    # Cognitive complexity: How intuitive is a function for humans.
max-complexity-allowed = 10
failed = true
